# geolayers_be

./: .coverage  Pipfile  README.md  celery_dev.py  dev.py  dev_envs.py  migrate.sh  pyproject.toml  pytest.ini
fixtures/: annots.py  db.sql
fixtures/bkp/: poetry_docker.txt  pyproject.toml
src/: app.py  config.py  models.py
src/apps/file_models/: service.py
src/apps/health/: cache.py  celery.py  db.py  service.py
src/apps/health/entities/: health_status.py
src/apps/health/operations/: cache.py  celery.py  db.py  ihealth.py
src/apps/layer/list/: repository.py
src/apps/layer/mvt/: cached_service.py  envelope.py  envelope_sql.py  iservice.py  repository.py  service.py  tile.py
src/apps/layer/mvt/operations/: envelope.py
src/apps/layer/mvt/repository/: envelope_sql.py  repository.py  tile_repo.py
src/apps/layer/upload/: repository.py  sent_file.py  service.py  shapefile.py  task.py
src/apps/layer/upload/celery/: repository.py  service.py  task.py  (+1 more)
src/apps/tasks/: repository.py
src/cache/: cache.py  icache.py
src/cache/engines/: memcached.py  no_cache.py
src/celery/: __tasks.py  app.py  worker_exceptions.py
src/celery/worker_init/: br_geom.py
src/db/: async_connection.py  default_conn_celery.py  default_connection.py  iconnection.py  managed_pool.py  models.py  sync_connection.py
src/framework/: exc_codes.py  exceptions.py  fastapi_logging.py  log.py
src/middlewares/: try_except.py
src/on_boot/validations/: cache.py  db_connection.py  ivalidations.py
src/rest/file_models/: routes.py  schemas.py  views.py
src/rest/health/: routes.py  schemas.py  views.py
src/rest/layer/: routes.py  schemas.py  views.py
src/rest/tasks/: routes.py  schemas.py  views.py
tests/: conftest.py  constants.py  utils.py
tests/middlewares/: test_try_except.py
tests/rest/file_models/: test_file_model_download_br_uf_2020.py  test_file_model_download_simple_polygon.py  test_file_models_download.py  test_file_models_list.py
tests/rest/health/: fixtures.py  test_health_check_down.py  test_health_check_up.py  test_health_service_detail.py  test_health_services.py
tests/rest/layer/: test_get_mvt.py  test_list_layers.py  test_upload.py
tests/rest/tasks/: test_save_layer.py
(+11 files in other folders)
