[tool.poetry]
name = "kgeo_be"
version = "0.1.0"
description = ""
authors = ["Igor Rodrigues"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.0"
Shapely = "^1.7.1"
aiopg = "^1.2.1"
uvicorn = "^0.13.4"
python-multipart = "^0.0.5"
vectorio = "^2.0.4"
GDAL = "3.0.4"
sqlacodegen = "^2.3.0"
GeoAlchemy2 = "^0.8.5"
AioMemcached = "^0.8.2"
SQLAlchemy = "^1.4.15"
loguru = "^0.5.3"
celery = "4.4.7"
asgiref = "^3.3.4"
flower = "^0.9.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
