[tool.poetry]
name = "geolayers_be"
version = "0.1.0"
description = ""
authors = ["Igor Rodrigues"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.0"
Shapely = "^1.7.1"
uvicorn = "^0.13.4"
python-multipart = "^0.0.5"
vectorio = "^2.0.4"
GDAL = "3.0.4"
sqlacodegen = "^2.3.0"
GeoAlchemy2 = "^0.8.5"
AioMemcached = "^0.8.2"
SQLAlchemy = "^1.4.15"
loguru = "^0.5.3"
celery = "4.4.7"
flower = "^0.9.7"
asyncpg = "^0.23.0"
psycopg2 = "^2.8.6"
psycopg2-binary = "^2.8.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
"testing.postgresql" = "^1.3.0"
pytest-env = "^0.6.2"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
